# [build-system]
# requires = ["setuptools>=65", "wheel"]
# build-backend = "setuptools.build_meta"

# [project]
# name = "shimmer3_pkg"
# version = "0.0.1"
# description = "It is to read the biosignals of the shimmer3 GSR unit."
# readme = "README.md"
# license = {text = "Apache License 2.0"}
# authors = [
#     {name = "Wonso Jo", email = "wonsu0513@gmail.com"},
#     {name = "Nathanael McCooeye", email = "nathanaelmccooeye@gmail.com"}
# ]
# requires-python = ">=3.8"
# dependencies = [
#     "rclpy",
#     "numpy",
#     "heartpy"
# ]

# [tool.setuptools.packages.find]
# where = ["."]
# exclude = ["test"]

# [tool.setuptools.package-data]
# shimmer3_pkg = ["launch/*.launch.py"]

# [project.scripts]
# shimmer3_node = "shimmer3_pkg.shimmer3_node:main"
# data_processing = "shimmer3_pkg.data_processing:main"
# csv_writer = "shimmer3_pkg.csv_writer:main"
# bpm_detector_node = "shimmer3_pkg.bpm_detector:main"
